--- a/es/des.html
+++ b/es/des.html
@@ -4,9 +4,15 @@
     <!-- Meta Data -->
     <title>JavaScript Deobfuscator</title>
     <meta charset="utf-8" />
-    <meta name="description" content="A simple but powerful deobfuscator to remove common JavaScript
-    obfuscation techniques"/>
-    <meta name="keywords" content="deobfuscate, deobfuscator, obfuscate, JavaScript"/>
+    <meta
+      name="description"
+      content="A simple but powerful deobfuscator to remove common JavaScript
+    obfuscation techniques"
+    />
+    <meta
+      name="keywords"
+      content="deobfuscate, deobfuscator, obfuscate, JavaScript"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -17,7 +23,7 @@
     <link rel="stylesheet" href="../sett-ofu/css/codemirror.css" />
     <link rel="icon" href="../img/favicon.ico" />
     <audio preload="metadata" autoplay>
-      <source src="../music/background2.mp3" type="audio/mpeg">
+      <source src="../music/background2.mp3" type="audio/mpeg" />
     </audio>
     <script src="../sett-ofu/datadog-rum-v4.js" type="text/javascript"></script>
   </head>
@@ -29,13 +35,18 @@
           <div class="left">
             <h1 class="heading">Desofucador de JavaScript</h1>
             <h2>
-              <p>Waos, encontraste esta opcion que estaba algo oculta entre millones de comillas xd.</p>
-                Un desofuscador simple pero poderoso para eliminar las técnicas comunes de ofuscación de JavaScript
+              <p>
+                Waos, encontraste esta opcion que estaba algo oculta entre
+                millones de comillas xd.
+              </p>
+              <br />
+              Un desofuscador simple pero poderoso para eliminar las técnicas
+              comunes de ofuscación de JavaScript
             </h2>
           </div>
 
           <div class="right">
-            <a href="#">
+            <a href="/">
               <img
                 src="../img/github-logo.png"
                 alt="GitHub Logo"
@@ -55,7 +66,7 @@
             <button class="textarea-button" id="deobfuscateButton">
               Desofucar
             </button>
-            <span id="errorMessage">Hubo un error al desofuscar</span>
+            <span id="errorMessage">Hubo un error al desofuscar el código</span>
           </div>
 
           <div class="right">
@@ -104,13 +115,21 @@
             <div class="checkbox-container">
               <label class="b-contain">
                 <span>Reemplazar funciones de proxy</span>
-                <input type="checkbox" id="replaceProxyFunctions" checked="true" />
+                <input
+                  type="checkbox"
+                  id="replaceProxyFunctions"
+                  checked="true"
+                />
                 <div class="b-input" id="proxyFunctionsCheckbox1"></div>
               </label>
 
               <label class="b-contain">
                 <span>Eliminar funciones de proxy</span>
-                <input type="checkbox" id="removeProxyFunctions" checked="true" />
+                <input
+                  type="checkbox"
+                  id="removeProxyFunctions"
+                  checked="true"
+                />
                 <div class="b-input" id="proxyFunctionsCheckbox2"></div>
               </label>
             </div>
@@ -123,7 +142,11 @@
             <div class="checkbox-container">
               <label class="b-contain">
                 <span>Expresión simplificada</span>
-                <input type="checkbox" id="simplifyExpressions" checked="true" />
+                <input
+                  type="checkbox"
+                  id="simplifyExpressions"
+                  checked="true"
+                />
                 <div class="b-input" id="expressionsCheckbox1"></div>
               </label>
 
@@ -166,16 +189,22 @@
     <script src="../ofu/javascript.js"></script>
     <script src="../ofu/placeholder.js"></script>
     <script src="../ofu/main.js" async></script>
-   <script src="../ofu/gen3.js"></script>
-   <script src="../ofu/gen2.js"></script>
-   <script src="../ofu/gen.js"></script>
+    <script src="../ofu/gen3.js"></script>
+    <script src="../ofu/gen2.js"></script>
+    <script src="../ofu/gen.js"></script>
 
-
-
-
-<div id="disqus_thread"></div>
-<script src="../js/loader.js"></script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <div id="disqus_thread"></div>
+    <script src="../js/loader.js"></script>
+    <noscript
+      >Please enable JavaScript to view the
+      <a href="https://disqus.com/?ref_noscript"
+        >comments powered by Disqus.</a
+      ></noscript
+    >
   </body>
-  <script id="dsq-count-scr" src="//healtpixi.disqus.com/count.js" async></script>
+  <script
+    id="dsq-count-scr"
+    src="//healtpixi.disqus.com/count.js"
+    async
+  ></script>
 </html>
