--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alerta</title>
-  </head>
-  <body>
-    <meta http-equiv="refresh" content="5;url=maintenance.html" />
-    <p>
-      El sitio está actualmente en mantenimiento. Por favor, disculpe las
-      molestias.
-    </p>
-  </body>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>En mantenimiento</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f3f3f3;
+            color: #333;
+            text-align: center;
+            padding-top: 100px;
+        }
+
+        h1 {
+            font-size: 36px;
+        }
+
+        p {
+            font-size: 18px;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>¡Sitio en Mantenimiento!</h1>
+        <p>Estamos realizando algunas actualizaciones en nuestro sitio web. Lamentamos los inconvenientes. Por favor, vuelve a visitarnos más tarde.</p>
+    </div>
+</body>
 </html>
