--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <div class="container">
         <h1>¡Sitio en Mantenimiento!</h1>
-        <p>Estamos realizando algunas actualizaciones en nuestro sitio web. Lamentamos los inconvenientes. Por favor, vuelve a visitarnos más tarde.</p>
+        <p>Se está realizando algunas actualizaciones en el sitio web. Lamento los inconvenientes. Por favor, vuelve a visitar más tarde.</p>
     </div>
 </body>
 </html>
