--- a/index.html
+++ b/index.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>En mantenimiento</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f3f3f3;
-            color: #333;
-            text-align: center;
-            padding-top: 100px;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f3f3f3;
+        color: #333;
+        text-align: center;
+        padding-top: 100px;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+      }
 
-        h1 {
-            font-size: 36px;
-        }
+      footer {
+        background-color: #333;
+        color: white;
+        padding: 20px;
+        text-align: center;
+      }
 
-        p {
-            font-size: 18px;
-        }
+      h1 {
+        font-size: 36px;
+      }
 
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-        }
+      main {
+        flex: 1;
+      }
+      p {
+        font-size: 18px;
+      }
+
+      .container {
+        max-width: 600px;
+        margin: 0 auto;
+      }
     </style>
-</head>
-<body>
-    <div class="container">
+  </head>
+  <body>
+    <main>
+      <div class="container">
         <h1>¡Sitio en Mantenimiento!</h1>
-        <p>Se está realizando algunas actualizaciones en el sitio web. Lamento los inconvenientes. Por favor, vuelve a visitar más tarde. 20/03/2024</p>
-    </div>
-</body>
+        <p>
+          Se está realizando algunas actualizaciones en el sitio web. Lamento
+          los inconvenientes. Por favor, vuelve a visitar más tarde.
+        </p>
+      </div>
+    </main>
+
+    <footer>&copy; HEALTPIX Disponible: 20-03-2024</footer>
+  </body>
 </html>
