--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
         max-width: 600px;
         margin: 0 auto;
       }
+
+      /* Estilo general del scrollbar */
+      ::-webkit-scrollbar {
+        width: 10px; /* Ancho del scrollbar */
+      }
+
+      /* Estilo del thumb (la barra de desplazamiento en sí misma) */
+      ::-webkit-scrollbar-thumb {
+        background-color: #888; /* Color del thumb */
+        border-radius: 5px; /* Radio de borde del thumb */
+      }
+
+      /* Estilo del track (la pista por la que se desplaza el thumb) */
+      ::-webkit-scrollbar-track {
+        background-color: #f1f1f1; /* Color del track */
+      }
     </style>
   </head>
   <body>
