--- a/es/games.html
+++ b/es/games.html
@@ -2,8 +2,8 @@
 <html lang="es">
   <head>
     <script src="../js/js.delay-click.js"></script>
-    <link rel="stylesheet" href="../css/home.style.css" />
     <link rel="stylesheet" href="../css/all.min.css" />
+    <link rel="stylesheet" href="../css/style.game.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,6 +36,31 @@
     </header>
     <script src="../js/js.movement.js"></script>
     <!--in-list-games-li-->
+
+    <main>
+      <div class="list">
+        <div class="pacman">
+          <a href="/game/pacman.html"
+            ><img
+              id="pacman-logo"
+              src="../game/app/style/graphics/pacman_logo.png"
+              alt="pacman"
+          /></a>
+        </div>
+        <div class="flappy">
+          <a href="/game/flappybird.html"
+            ><img
+              id="flappy-logo"
+              src="../game/app/style/graphics/flappy-bird-game-logo-180.png"
+              alt="flappy"
+          /></a>
+        </div>
+        <!--
+        <div class="project-pacman">
+          <a href="/proyect-pacman/pacman.html">Pacman Project Basic</a>
+        </div>-->
+      </div>
+    </main>
 
     <!--end-list-game-li-->
     <script
