--- a/es/games.html
+++ b/es/games.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <link rel="shortcut icon" href="/favicon/game.svg" type="image/x-icon">
     <script src="../js/js.delay-click.js"></script>
     <link rel="stylesheet" href="../css/all.min.css" />
     <link rel="stylesheet" href="../css/style.game.css" />
