--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <script src="./js/js.movement.js"></script>
 
     <div class="countdown">
-      <p class="timeout">Tiempo restante:</p>
+      <p class="timeout">Tiempo navideño en:</p>
       <section>
         <p>
           <span id="days"></span> días <span id="hours"></span> horas
