--- a/es/games.html
+++ b/es/games.html
@@ -2,8 +2,8 @@
 <html lang="es">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="/js/theme.js"></script>
-    <link rel="stylesheet" href="/css/style.game.css" />
+    <script defer src="../js/theme.js"></script>
+    <link rel="stylesheet" href="../css/style.game.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
       rel="stylesheet"
