--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
       </section>
       <script src="./js/date_time.js"></script>
     </div>
+    <div class="dwapp">
+      <a href="">Descarga la version para android</a>
+    </div>
 
     <script
       type="module"
