--- a/index.html
+++ b/index.html
@@ -54,8 +54,14 @@
       </section>
       <script src="./js/date_time.js"></script>
     </div>
+    <br />
+    <br />
     <div class="dwapp">
-      <a href="">Descarga la version para android</a>
+      <a
+        href="#"
+        onclick="redirigirDespuesDeRetraso('/download/src/app/app.apk')"
+        >Descarga la version para android</a
+      >
     </div>
 
     <script
