--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     <br />
     <br />
-    <div class="dwapp">
+    <div id="dwapp" class="dwapp">
       <a
         href="#"
         onclick="redirigirDespuesDeRetraso('/download/src/app/app.apk')"
