--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <a
         href="#"
         onclick="redirigirDespuesDeRetraso('/download/src/app/app.apk')"
-        >Descarga la version para android</a
+        >Descarga la versión para Android</a
       >
     </div>
 
