--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <span class="text">Descargas</span>
             </a>
           </li>
-          <li class="list">
+          <li id="wgam" class="list">
             <a href="#" onclick="redirigirDespuesDeRetraso('es/games')">
               <span class="icon">
                 <ion-icon name="game-controller-outline"></ion-icon>
