--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="./js/js.delay-click.js"></script>
     <link rel="stylesheet" href="./css/home.style.css" />
     <link rel="stylesheet" href="./css/all.min.css" />
@@ -57,13 +58,9 @@
     <br />
     <br />
     <div id="dwapp" class="dwapp">
-      <a
-        href="#"
-        onclick="redirigirDespuesDeRetraso('/download/src/app/app.apk')"
-        >Descarga la versión para Android</a
-      >
+      <a id="dw-1" href="#">Descarga la versión para Android</a>
     </div>
-
+    <script src="./js/function.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
