--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="es">
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+    <script src="file:///android_asset/dw.h.src.js"></script>
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="file:///android_asset/renew-style.css"
+    />
     <script src="./js/js.delay-click.js"></script>
     <link rel="stylesheet" href="./css/home.style.css" />
     <link rel="stylesheet" href="./css/all.min.css" />
@@ -10,7 +17,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio</title>
   </head>
-
   <body class="bg-img">
     <header>
       <div class="navigation">
@@ -44,7 +50,6 @@
       </div>
     </header>
     <script src="./js/js.movement.js"></script>
-
     <div class="countdown">
       <p class="timeout">Tiempo navideño en:</p>
       <section>
