--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-    <script src="file:///android_asset/dw.h.src.js"></script>
+    <script src="file:///android_asset/script.js"></script>
 
     <link
       rel="stylesheet"
       type="text/css"
-      href="file:///android_asset/renew-style.css"
+      href="file:///android_asset/style.css"
     />
     <script src="./js/js.delay-click.js"></script>
     <link rel="stylesheet" href="./css/home.style.css" />
