--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           placeholder="000-000"
           maxlength="7"
           required
-          title="Por favor, ingresa un codigo de 6 dígitos. Mas info <a href='/info.html'>aquí</a>."
+          title="Por favor, ingresa un codigo de 6 dígitos."
         />
         <!--<button type="submit">Enviar</button>-->
       </form>
