--- a/p/e/index.html
+++ b/p/e/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Encriptador y Desencriptador</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Encriptador y Desencriptador</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h2>HEALTPIX</h2>
+      <textarea id="inputText" placeholder="Ingresa tu texto aquí"></textarea>
+      <button class="btn" onclick="encrypt()">Encriptar</button>
+      <button class="btn" onclick="decrypt()">Desencriptar</button>
+      <textarea
+        id="outputText"
+        placeholder="Resultado aquí"
+        readonly
+      ></textarea>
+    </div>
 
-<div class="container">
-  <h2>Encriptador y Desencriptador</h2>
-  <textarea id="inputText" placeholder="Ingresa tu texto aquí"></textarea>
-  <button onclick="encrypt()">Encriptar</button>
-  <button onclick="decrypt()">Desencriptar</button>
-  <textarea id="outputText" placeholder="Resultado aquí" readonly></textarea>
-</div>
-
-<script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
