--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <audio id="successSound" src="/download/src/music/success.mp3"></audio>
     <audio id="successSound" src="/download/src/music/error.mp3"></audio>
     <audio id="successSound" src="/download/src/music/error2.mp3"></audio>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <link rel="stylesheet" href="/css/s.search.css" />
     <script src="./js/js.delay-click.js"></script>
     <link rel="stylesheet" href="./css/home.style.css" />
@@ -60,7 +59,7 @@
     <br />
     <br />
     <div id="dwapp" class="dwapp">
-      <a id="dw-1" href="#">Descarga la versión para Android</a>
+      <a id="dw-1" href="/download/src/app/app.apk">Descarga la versión para Android</a>
     </div>
     <script src="./js/function.js"></script>
     <script
