--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
     <br />
     <br />
     <div id="dwapp" class="dwapp">
-      <a id="dw-1" href="/download/src/app/app.apk">Descarga la versión para Android</a>
+      <a id="dw-1" href="/download/src/app/app.apk"
+        >Descarga la versión para Android</a
+      >
     </div>
-    <script src="./js/function.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
