--- a/what/index.html
+++ b/what/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cat Sound</title>
     <style>
       body {
-        transition: background-color 0.5s ease-out; /* Transición más rápida para que los cambios de color sean más perceptibles */
+        transition: background-color 0.5s linear; /* Transición más rápida para que los cambios de color sean más perceptibles */
       }
     </style>
   </head>
@@ -21,7 +21,7 @@
         source.connect(analyser);
         analyser.connect(audioCtx.destination);
 
-        analyser.fftSize = 1024;
+        analyser.fftSize = 4096;
         var bufferLength = analyser.frequencyBinCount;
         var dataArray = new Uint8Array(bufferLength);
 
@@ -35,7 +35,7 @@
           if (maxAmplitude > threshold) {
             var hue = Math.random() * 360; // Genera un valor de matiz (hue) aleatorio
             var saturation = "100%"; // Máxima saturación para colores vibrantes
-            var lightness = "50%"; // Luminosidad media para que los colores sean más visibles
+            var lightness = "10%"; // Luminosidad media para que los colores sean más visibles
             document.body.style.backgroundColor =
               "hsl(" + hue + ", " + saturation + ", " + lightness + ")"; // Cambia el color de fondo utilizando HSL
           }
