--- a/static/es/index.html
+++ b/static/es/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/s.search.css" />
     <script src="./js/js.delay.js"></script>
     <!--<link rel="stylesheet" href="https://cdn.healtpix.tk/css/home.style.css" />-->
-    <link rel="stylesheet" href="./css/home.style.css">
+    <link rel="stylesheet" href="./css/home.style.css" />
     <link rel="stylesheet" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/es-s.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
