--- a/static/ja/downloads.html
+++ b/static/ja/downloads.html
@@ -17,7 +17,7 @@
       <div class="navigation">
         <ul>
           <li class="listEN active">
-            <a href="#" onclick="redirectAfterDelay('/static/en/')">
+            <a href="#" onclick="redirectAfterDelay('/static/ja/')">
               <span class="icon">
                 <ion-icon name="home-outline"></ion-icon>
               </span>
