--- a/static/ja/index.html
+++ b/static/ja/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./css/home.style.css" />
     <link rel="stylesheet" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/es-s.css" />
-    <link rel="import" href="component.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ウェブ</title>
   </head>
@@ -19,7 +18,7 @@
       <div class="navigation">
         <ul>
           <li class="list active">
-            <a href="#" onclick="redirectAfterDelay('/')">
+            <a href="#" onclick="redirectAfterDelay('/static/ja/')">
               <span class="icon">
                 <ion-icon name="home-outline"></ion-icon>
               </span>
@@ -27,7 +26,7 @@
             </a>
           </li>
           <li class="list">
-            <a href="#" onclick="redirectAfterDelay('es/downloads')">
+            <a href="#" onclick="redirectAfterDelay('downloads')">
               <span class="icon">
                 <ion-icon name="download-outline"></ion-icon>
               </span>
@@ -35,7 +34,7 @@
             </a>
           </li>
           <li id="wgam" class="list">
-            <a href="#" onclick="redirectAfterDelay('es/games')">
+            <a href="#" onclick="redirectAfterDelay('games')">
               <span class="icon">
                 <ion-icon name="game-controller-outline"></ion-icon>
               </span>
