--- a/static/en/index.html
+++ b/static/en/index.html
@@ -18,7 +18,7 @@
       <div class="navigation">
         <ul>
           <li class="list active">
-            <a href="#" onclick="redirectAfterDelay('/')">
+            <a href="#" onclick="redirectAfterDelay('/static/en/')">
               <span class="icon">
                 <ion-icon name="home-outline"></ion-icon>
               </span>
