--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <div class="ring"></div>
       <div class="ring"></div>
       <div class="ring"></div>
-      <p id="msgLoad" class="msgLoad" >Loading you language...</p>
+      <p id="msgLoad" class="msgLoad" ></p>
     </div>
     <script>
       document.addEventListener("DOMContentLoaded", function() {
