--- a/static/es/info.html
+++ b/static/es/info.html
@@ -33,6 +33,9 @@
       </ul>
       <p>¡Explora y disfruta de todas nuestras funciones!</p>
       <p id="ipCliente"></p>
+      <button style="color: black; background: rgb(47, 126, 47); border-radius: 20px; height: 200px; width: 200px">
+        𝕃𝕠𝕤 𝕣𝕖𝕒𝕝𝕖𝕤✨🥀 A Realm Reborn
+      </button>
     </div>
 
     <script>
