--- a/static/es/descargas.html
+++ b/static/es/descargas.html
@@ -31,57 +31,15 @@
     <script src="./js/js.movement.js"></script>
     <div class="search-container">
       <h3>Busqueda</h3>
-      <input type="text" id="searchInput" placeholder="1.14.30" />
-      <ul id="resultsList"></ul>
+      <input type="text" id="searchInput" placeholder="Buscar versión..." />
     </div>
 
     <div class="contenedor">
       <div class="box-download">
-        <nav class="links">
-          <h3>VERSIONES</h3>
-          <p>
-            <a
-              href="https://www.mediafire.com/file/wxbvpasvynxqnm1/MCPE_1.20.32_OFICIAL_ULTIMA_VERSION.apk/file"
-              target="_blank"
-              >Minecraft 1.20.32</a
-            ><br /><br />
-            <a
-              href="https://www.mediafire.com/file/q91mhw7nevv5dkq/MCPE_1.20.15.apk/file"
-              target="_blank"
-              >Minecraft 1.20.15</a
-            ><br /><br />
-            <a
-              href="https://www.mediafire.com/file/7t0iemav3efmt0g/MCPE_1.20.12.apk/file"
-              target="_blank"
-              >Minecraft 1.20.12</a
-            ><br /><br />
-            <a
-              href="https://www.mediafire.com/file/iqvi9le0xre3wzf/MCPE_1.19.71.apk/file"
-              target="_blank"
-              >Minecraft 1.19.71</a
-            ><br /><br />
-            <a
-              href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file"
-              target="_blank"
-              >Minecraft 1.19.70</a
-            ><br /><br />
-            <a
-              href="https://www.mediafire.com/file/506l8cufu8a0y5o/MCPE_1.19.51.apk/file"
-              target="_blank"
-              >Minecraft 1.19.51</a
-            ><br /><br />
-            <a
-              href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file"
-              target="_blank"
-              >Minecraft 1.19.50</a
-            ><br /><br />
-            <a
-              href="#"
-              onclick="redirigirDespuesDeRetraso('https://github.com/Ketch502x/Data-app/raw/c772b03d1a0c6a7354df093b19acfbceb0ce8f98/MCPE%201.14.30.apk')"
-              >Minecraft 1.14.30</a
-            ><br />
-          </p>
-        </nav>
+        <main id="fileList">
+
+        </main>
+        
       </div>
     </div>
     <script src="./js/js.movement.js"></script>
