--- a/static/es/index.html
+++ b/static/es/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BYZ441H1SN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BYZ441H1SN');
+</script>
     <meta charset="UTF-8" />
     <audio id="successSound" src="/assets/audio/success.mp3"></audio>
     <audio id="successSound" src="/assets/audio/error.mp3"></audio>
